# youtube_tts

./: .coverage  .coveragerc  .cursorrules  .gitignore  .python-version  LICENSE  README.ja.md  README.md  TODO.md  Untitled.vvproj  dictionary.txt  dictionary.txt.example  get_quota_info.py  ng_words.txt  ng_words.txt.example  oauth_test.py  pyproject.toml  requirements.txt  ruff_errors.txt  voicevox_test.py  youtube_live_voicevox.py  youtube_video_voicevox.py  youtube_voicevox.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring-request.md
tests/: conftest.py  test_app_live_worker.py  test_app_logging.py  test_app_playback.py  test_app_run.py  test_app_video_worker.py  test_audio.py  test_audio_device.py  test_audio_play.py  test_audio_stop.py  test_auth.py  test_config.py  test_dictionary.py  test_get_quota_info.py  test_integration.py  test_live_cli.py  test_live_worker_chat.py  test_live_worker_error.py  test_live_worker_quota.py  test_live_worker_stream.py  test_models.py  test_oauth_test.py  test_obs.py  test_playback.py  test_quota.py  test_quota_monitor.py  test_video_cli.py  test_video_worker_backlog.py  test_video_worker_coverage.py  test_video_worker_polling.py  test_voicevox.py  test_voicevox_test.py  test_youtube.py  test_youtube_live.py  test_youtube_utils.py  test_youtube_video.py  test_youtube_voicevox_cli.py  test_youtube_voicevox_logic.py
youtube_tts/: __init__.py  app.py  audio.py  auth.py  client.py  config.py  dictionary.py  live.py  logger.py  models.py  obs.py  queue.py  quota.py  utils.py  video.py  voicevox.py  youtube.py
youtube_tts/cli/: context.py  parser.py
youtube_tts/runners/: base.py  live.py  video.py
youtube_tts/workers/: live.py  playback.py  quota_monitor.py  video.py
