[project]
name = "youtube-tts"
version = "0.1.0"
description = "YouTube LiveのチャットコメントをリアルタイムにVOICEVOXで読み上げるツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-monitoring>=2.31.0",
    "obs-websocket-py>=1.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "callee>=0.3.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
