[project]
name = "youtube-tts"
version = "0.1.0"
description = "YouTube LiveのチャットコメントをリアルタイムにVOICEVOXで読み上げるツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-monitoring>=2.31.0",
    "obs-websocket-py>=1.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "callee>=0.3.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 80
exclude = [
    ".agents",
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    ".venv",
    "__pycache__",
    "build"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-select = ["W505"]
# E (pycodestyle - Errors) : Pythonの標準スタイルガイド（PEP 8）に基づくエラーをチェックします。
# F (Pyflakes) : コードのスタイルではなく、論理的なバグやエラーをチェックします。
# I (isort) : インポート文（import ...）の並び順やグループ分けをチェック・整理します。
# W (pycodestyle - Warnings) : コメントやDocstringを含むPEP 8準拠の警告項目をチェックします。
# W505 : Docstring / コメント行の長さ（デフォルトでは無効なので明示）
# 補足: W505 を指定しても日本語は Unicode ポイントでカウントされるので、
# 全角2桁換算で80桁を超えていても警告は出ない。
# → 途中に空白を挟むと検出される